5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1578_996.log
== TEST (2019-03-11 19:48:47) 
-- CODE:
print("***** ")
print("*째째* ")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
***** 
*째째* 
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:49:08) 
-- CODE:
print("***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:49:12) 
-- CODE:
print("***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.127777
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:49:15) 
-- CODE:
print("***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:49:53) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
*****
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:49:59) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.223812
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:03) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
*****
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:59) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
*****
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:10) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:51:15) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.127727
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:32) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:51:39) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.194072
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:51:58) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.133317
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:52:00) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.133042
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:52:02) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.264113
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:52:19) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
*****
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:52:24) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.153668
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:52:40) 
-- CODE:
  print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:52:49) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
*****
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:52:52) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.24864
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:52:59) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("*****")
-- OUTPUT:
*****
(* o o *)
**  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:53:02) 
-- CODE:
print("*****")
print("(* o o *)")
print("**  ^  * ")
print("* --- * ")
print("*****")
-- EXECUTION TIME:
0.118464
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
**  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:53:27) 
-- CODE:
print("*****")
print("(* o o *)")
print(" **  ^  * ")
print(" * --- * ")
print("*****")
-- OUTPUT:
*****
(* o o *)
 **  ^  * 
 * --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:53:30) 
-- CODE:
print("*****")
print("(* o o *)")
print(" **  ^  * ")
print(" * --- * ")
print("*****")
-- EXECUTION TIME:
0.147394
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 **  ^  * 
 * --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:25) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:55:28) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.190467
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:22:20) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.12645
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:33:44) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.177465
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:44:03) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
